--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -47,7 +47,8 @@
     <section class="restaurant">
       <h2>2. Terraza 40 </h2>
       <div class="restaurant-content">
-        <p>O Terraza 40 é o primeiro restaurante panorâmico de Curitiba, oferecendo uma vista de 360° da cidade. Com um ambiente sofisticado e acolhedor, é o lugar ideal para jantares românticos, celebrações especiais ou para apreciar o melhor da culinária italiana e uruguaia, com toques gourmet e ingredientes paranaenses.</p>
+        <p>O Terraza 40 é o primeiro restaurante panorâmico de Curitiba,oferecendo uma vista de 360° da cidade.
+          Com um ambiente sofisticado e acolhedor, é o lugar ideal para jantares românticos, celebrações especiais ou para apreciar o melhor da culinária italiana e uruguaia, com toques gourmet e ingredientes paranaenses.</p>
         
         <p>Pratos Principais:</p>
         <ul>
