--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -22,7 +22,7 @@
             conhecido por sua carne de qualidade e ambiente sofisticado. O restaurante oferece uma experiência gastronômica única,
             com pratos preparados por chefs renomados.</p>
 
-        <p>Pratos Principais:</p>
+        <p>🍽️Pratos Principais:</p>
 
         <ul>
           <li>Tomahawk Folheado a Ouro</li>
@@ -30,7 +30,7 @@
           <li>Costela 4 Ossos</li>
         </ul>
 
-        <p>Horário de Funcionamento:</p>
+        <p>🕙Horário de Funcionamento:</p>
 
         <ul>
           <li>Segunda a quinta-feira: 11h30 às 15h30 e 17h30 às 23h</li>
@@ -38,7 +38,7 @@
           <li>Sábado: 11h30 às 0h</li>
           <li>Domingo: 11h30 às 22h</li>
         </ul>
-        <p> Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
+        <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
         <a href="https://www.instagram.com/theoxsteakhouses/?igsh=amdoZWdtMGhoNTdz#" target="_blank"> Venha nos conhecer</a>
         
       </div>
@@ -50,20 +50,20 @@
         <p>O Terraza 40 é o primeiro restaurante panorâmico de Curitiba,oferecendo uma vista de 360° da cidade.
           Com um ambiente sofisticado e acolhedor, é o lugar ideal para jantares românticos, celebrações especiais ou para apreciar o melhor da culinária italiana e uruguaia, com toques gourmet e ingredientes paranaenses.</p>
         
-        <p>Pratos Principais:</p>
+        <p>🍽️Pratos Principais:</p>
         <ul>
           <li>Beef Wellington</li>
           <li>Pescada de Santa Catarina</li>
           <li>Mignon com Ravioli de Maçã</li>
         </ul>
-        <p>Horário de Funcionamento:</p>
+        <p>🕙Horário de Funcionamento:</p>
         <ul>
           <li>Segunda a quinta-feira: 11h30 às 15h e 18h às 23h</li>
           <li>Sexta-feira: 11h30 às 15h e 18h às 0h</li>
           <li>Sábado: 11h30 às 0h</li>
           <li>Domingo: 11h30 às 22h</li>
         </ul>
-        <p> Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
+        <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
         <a href="https://www.instagram.com/terrazza40?igsh=bjh4Y2s2aXptcGo5" target="_blank"> Venha nos conhecer</a>
       </div>
     </section>
