--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -17,7 +17,6 @@
     <section class="restaurant">
       <h2>1. The Ox Room Steakhouse</h2>
       <div class="restaurant-content">
-        <p>Sobre:</p>
         <p>O The Ox Room Steakhouse é um dos melhores restaurantes de Curitiba, 
             conhecido por sua carne de qualidade e ambiente sofisticado. O restaurante oferece uma experiência gastronômica única,
             com pratos preparados por chefs renomados.</p>
@@ -39,7 +38,12 @@
           <li>Domingo: 11h30 às 22h</li>
         </ul>
         <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
-        <a href="https://www.instagram.com/theoxsteakhouses/?igsh=amdoZWdtMGhoNTdz#" target="_blank"> Venha nos conhecer</a>
+          <p>📞 Telefone: (41) 3039-4577
+</p>
+        <a href="https://www.instagram.com/theoxsteakhouses?igsh=amdoZWdtMGhoNTdz" target="_blank">
+  Visite nosso perfil no Instagram
+  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;">
+</a>
         
       </div>
     </section>
@@ -64,7 +68,12 @@
           <li>Domingo: 11h30 às 22h</li>
         </ul>
         <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
-        <a href="https://www.instagram.com/terrazza40?igsh=bjh4Y2s2aXptcGo5" target="_blank"> Venha nos conhecer</a>
+        <p>📞 Telefone: (41) 3014-0141 </p>
+        <a href="https://www.instagram.com/terrazza40?igsh=bjh4Y2s2aXptcGo5" target="_blank">
+  Visite nosso perfil no Instagram
+  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;">
+</a>
+
       </div>
     </section>
 
