--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -40,9 +40,8 @@
         <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
           <p>📞 Telefone: (41) 3039-4577
 </p>
-        <a href="https://www.instagram.com/theoxsteakhouses?igsh=amdoZWdtMGhoNTdz" target="_blank">
-  Visite nosso perfil no Instagram:
-  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;">
+        <a href="https://www.instagram.com/theoxsteakhouses/?igsh=amdoZWdtMGhoNTdz#" target="_blank">
+  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
         
       </div>
@@ -70,8 +69,7 @@
         <p> 📍Endereço: Rua Comendador Araújo, 100 - Batel, Curitiba - PR, 80420-000 </P>
         <p>📞 Telefone: (41) 3014-0141 </p>
         <a href="https://www.instagram.com/terrazza40?igsh=bjh4Y2s2aXptcGo5" target="_blank">
-  Visite nosso perfil no Instagram:
-  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;">
+  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
 
       </div>
