--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -97,6 +97,8 @@
         <a href="https://www.instagram.com/taishorestaurante/" target="_blank">
   <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
+      </div>
+    </section>
 
     <section class="restaurant">
       <h2>4. O Celeiro</h2>
