--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -78,7 +78,7 @@
     <section class="restaurant">
       <h2>3. Taisho </h2>
       <div class="restaurant-content">
-        <p>Restaurante japonês rodízio ou à la carte, com cerveja artesanal e arte asiática em ambiente moderno.</p>
+        <p>O restaurante Taisho Yakiniku é uma cadeia de restaurantes de comida japonesa, que oferece churrasco japonês e rodízio de sushi e outros pratos orientais. O Taisho Yakiniku, com diversas unidades, tem sua origem em 1999, em Curitiba, e se destaca por seus cardápios de rodízio e pela experiência de churrasco japonês com grelha em cada mesa.</p>
         
         <p>🍽️Pratos Principais:</p>
         <ul>
