--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -137,9 +137,9 @@
             <td>Bigorrilho</td>
           </tr>
           <tr>
-            <td>Kenko Sushi</td>
+            <td>Taisho</td>
             <td>Japonesa</td>
-            <td>R$ 90</td>
+            <td>R$ 250</td>
             <td>Água Verde</td>
           </tr>
           <tr>
