La Mafia Trattoria
Preenchi meu quadrado, algo a mais?

--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -101,14 +101,28 @@
     </section>
 
     <section class="restaurant">
-      <h2>4. O Celeiro</h2>
+      <h2>3. La Mafia Trattoria </h2>
       <div class="restaurant-content">
-        <p>Churrascaria tradicional com cortes nobres e buffet variado.</p>
+        <p> Renomado restaurante italiano e terceira unidade de uma rede que hoje conta com cinco franquias.
+           Com ambiente temático inspirado na máfia e decoração no estilo cabaret, oferece massas artesanais frescas,
+           pratos clássicos da culinária italiana e uma carta de vinhos cuidadosamente selecionada.</p>
+        
+        <p>🍽️Pratos Principais:</p>
         <ul>
-          <li>Prato destaque: Picanha na brasa</li>
-          <li>Estacionamento próprio</li>
-          <li>Música ao vivo nos fins de semana</li>
+          <li>Filetto al vino rosso com Risoto Milanês</li>
+          <li>Entrecot alla fonduta di formaggio com Tagliatele</li>
+          <li>Burrata ao forno com Pesto Trapanese</li>
         </ul>
+        <p>🕙Horário de Funcionamento:</p>
+        <ul>
+          <li>Segunda a Sábado: 18:00 ás 23:00</li>
+          <li>Domingo: Não abre.</li>
+        </ul>
+        <p> 📍Endereço: R. Desembargador Motta, 2601 - Batel, Curitiba - PR, 80430-200</P>
+        <p>📞 Telefone: (41) 99199-1015/3779-7555 </p>
+        <a href="https://www.instagram.com/lamafiacuritiba/" target="_blank">
+  <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
+</a>
       </div>
     </section>
     <section>
@@ -143,10 +157,10 @@
             <td>Água Verde</td>
           </tr>
           <tr>
-            <td>O Celeiro</td>
-            <td>Churrascaria</td>
-            <td>R$ 120</td>
-            <td>Santa Felicidade</td>
+            <td>La Mafia Trattoiar</td>
+            <td>Italiano</td>
+            <td>R$ 85</td>
+            <td>Batel</td>
           </tr>
         </tbody>
       </table>
