--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -119,7 +119,7 @@
           <li>Domingo: Não abre.</li>
         </ul>
         <p> 📍Endereço: R. Desembargador Motta, 2601 - Batel, Curitiba - PR, 80430-200</P>
-        <p>📞 Telefone: (41) 99199-1015/3779-7555 </p>
+        <p>📞 Telefone: (41) 99199-1015 </p>
         <a href="https://www.instagram.com/lamafiacuritiba/" target="_blank">
   <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
