Adicionando as fotos dos restaurantes

--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -83,6 +83,20 @@
         <a href="https://www.instagram.com/terrazza40?igsh=bjh4Y2s2aXptcGo5" target="_blank">
   <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
+<div class="carousel">
+  <div class="carousel-images">
+    <img src="imagens/Restaurante Terraza.jpg" alt="Restaurante 1">
+    <img src="imagens/Restaurante Terraza 02.png" alt="Restaurante 2">
+    <img src="imagens/Restaurante Terraza 03.jpg" alt="Restaurante 3">
+    <img src="imagens/Restaurante Terraza 04.jpg" alt="Restaurante 4">
+    <img src="imagens/Restaurante Terraza 05.jpg" alt="Restaurante 5">
+    <img src="imagens/Restaurante Terraza 06.jpg" alt="Restaurante 6">
+  </div>
+  <button class="carousel-button prev" onclick="prevSlide()">&#10094;</button>
+  <button class="carousel-button next" onclick="nextSlide()">&#10095;</button>
+</div>
+        
+      </div>
 
       </div>
     </section>
@@ -109,6 +123,22 @@
         <a href="https://www.instagram.com/taishorestaurante/" target="_blank">
   <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
+
+
+<div class="carousel">
+  <div class="carousel-images">
+    <img src="imagens/Taisho Yakiniku 01.png" alt="Restaurante 1">
+    <img src="imagens/Taisho Yakiniku 02.jpg" alt="Restaurante 2">
+    <img src="imagens/Taisho Yakiniku 03.jpg" alt="Restaurante 3">
+    <img src="imagens/Taisho Yakiniku 04.jpg" alt="Restaurante 4">
+    <img src="imagens/Taisho Yakiniku 05.jpeg" alt="Restaurante 5">
+    <img src="imagens/Taisho Yakiniku 06.jpg" alt="Restaurante 6">
+  </div>
+  <button class="carousel-button prev" onclick="prevSlide()">&#10094;</button>
+  <button class="carousel-button next" onclick="nextSlide()">&#10095;</button>
+</div>
+
+
       </div>
     </section>
 
@@ -135,6 +165,21 @@
         <a href="https://www.instagram.com/lamafiacuritiba/" target="_blank">
   <img src="imagens/instagram.png" alt="Instagram" style="width: 20px; height: 20px; vertical-align: middle;"> Venha nos conhecer
 </a>
+
+<div class="carousel">
+  <div class="carousel-images">
+    <img src="imagens/La Mafia Trattoria 01.jpg" alt="Restaurante 1">
+    <img src="imagens/La Mafia Trattoria 02.jpg" alt="Restaurante 2">
+    <img src="imagens/La Mafia Trattoria 03.jpg" alt="Restaurante 3">
+    <img src="imagens/La Mafia Trattoria 04.jpg" alt="Restaurante 4">
+    <img src="imagens/La Mafia Trattoria 05.jpg" alt="Restaurante 5">
+    <img src="imagens/La Mafia Trattoria 06.png" alt="Restaurante 6">
+  </div>
+  <button class="carousel-button prev" onclick="prevSlide()">&#10094;</button>
+  <button class="carousel-button next" onclick="nextSlide()">&#10095;</button>
+</div>
+
+
       </div>
     </section>
     <section>
