--- a/Roteiro_criativa.html
+++ b/Roteiro_criativa.html
@@ -16,6 +16,39 @@
   <main>
     <section class="restaurant">
       <h2>1. The Ox Room Steakhouse</h2>
+      <style>
+  input[type="checkbox"] {
+    display: none;
+  }
+
+  label.restaurante-titulo {
+    display: block;
+    background-color: #5b2121;
+    color: white;
+    padding: 15px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.2em;
+    border-radius: 5px 5px 0 0;
+    user-select: none;
+  }
+
+  .conteudo {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease, padding 0.3s ease;
+    background-color: #fff;
+    padding: 0 20px;
+    border: 1px solid #5b2121;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+  }
+
+  input[type="checkbox"]:checked + label + .conteudo {
+    max-height: 1000px; /* alto o suficiente para seu conteúdo */
+    padding: 15px 20px;
+  }
+</style>
       <div class="restaurant-content">
         <p>O The Ox Room Steakhouse é um dos melhores restaurantes de Curitiba, 
             conhecido por sua carne de qualidade e ambiente sofisticado. O restaurante oferece uma experiência gastronômica única,
