--- a/Restaurante.roteiro.html
+++ b/Restaurante.roteiro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="exp_criatica.css" />
+  <link rel="stylesheet" href="css.Restaurantes.css" />
   <title>Restaurantes de Curitiba</title>
   
 </head>
